# ASKII_ALgorithm-SFML-wxWidgets

./: .gitignore  CMakeLists.txt  If_Windows.bat  README.md  conanfile.py  main.cpp  vcpkg.json
ext/: CMakeLists.txt
ext/SFML2/Frameworks/SFML.framework/Versions/2.6.0/: SFML
ext/SFML2/Frameworks/sfml-audio.framework/Versions/2.6.0/: sfml-audio
ext/SFML2/Frameworks/sfml-graphics.framework/Versions/2.6.0/: sfml-graphics
ext/SFML2/Frameworks/sfml-network.framework/Versions/2.6.0/: sfml-network
ext/SFML2/Frameworks/sfml-system.framework/Versions/2.6.0/: sfml-system
ext/SFML2/Frameworks/sfml-window.framework/Versions/2.6.0/: sfml-window
ext/wxWidjets/: CMakeLists.txt
refs/: index.txt
src/: CMakeLists.txt  DIRS.h  Directories.h.in
src/Components/: Scroll_Image.hpp  Scroll_image.cpp
src/SFML/: ASKII.cpp  ASKII.hpp  CMakeLists.txt  includes.h
src/SFML/ASKII/: ASKII.cpp  ASKII.hpp  ASKII2.cpp  ASKII2.hpp  index.txt
src/Window/: Window.cpp  Window.hpp
src/Window/Settings/: Settings.cpp  Settings.hpp
tests/: CMakeLists.txt
tests/SFML-test/: CMakeLists.txt  README.md
tests/conan/: CMakeLists.txt  conanfile.py  conanfile.txt
tests/src/: CMakeLists.txt  help.h  help.h.in  main.cpp
tests/src/math/: CMakeLists.txt  math.hpp
tests/vcpkg/: CMakeLists.txt  main.cpp  vcpkg.json
tests/wWidgets-test/: CMakeLists.txt  vcpkg.json
tests/wWidgets-test/ext/: CMakeLists.txt
tests/wWidgets-test/src/: help.h  help.h.in  main.cpp
tests/wWidgets-test/src/SFML/: ASKII.cpp  CMakeLists.txt
tests/wWidgets-test/src/ref/: index.txt
